--- a/hw1/style.css
+++ b/hw1/style.css
@@ -19,18 +19,41 @@
   display: block;
   padding: 20px;
   text-decoration: none;
-  color: black;
+  color: cornflowerblue;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .element {
   list-style-type: none;
 }
 .element :hover {
-  color: red;
+  color: blue;
 }
 
-.heading {
+.main-heading {
   text-align: center;
+  color: #222222;
+  font-size: 28px;
+  line-height: 36px;
+  font-weight: bold;
+}
+
+.smaller-heading {
+  text-align: center;
+  color: coral;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 80px;
+}
+
+.text-block {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 30px;
+  color: #7D7987;
 }
 
 .margin-bot {
