--- a/hw3-4-5/style.sass
+++ b/hw3-4-5/style.sass
@@ -93,3 +93,128 @@
 .top_logo
     display: flex
     justify-content: space-between
+
+.item-box
+    display: flex
+    justify-content: space-between
+    padding: 100px 0
+    
+
+.item  
+   padding: 40px 30px 25px 30px
+   display: flex
+   flex-direction: column  
+   width: 370px
+
+.item:hover
+    box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06) 
+
+.item-img   
+    max-width: 70px
+    padding-bottom: 25px
+
+.item-heading
+    padding-bottom: 17px
+    color: #000
+    font-size: 24px
+    font-style: normal
+    font-weight: 400
+    line-height: normal
+
+.item-text
+    padding-bottom: 25px
+    color: #666
+    font-size: 15px
+    font-style: normal
+    font-weight: 400
+    line-height: 22.5px
+
+.item-link
+    text-decoration: none
+    color: #000
+    font-size: 11px
+    font-style: normal
+    font-weight: 400
+    line-height: 16.5px
+
+.sec-cards
+    display: flex
+    flex-direction: column
+    padding-top: 92px
+    padding-bottom: 100px
+
+.sec-heading
+    color: #000
+    font-size: 45px
+    font-style: normal
+    font-weight: 400
+    line-height: normal
+    padding-bottom: 19px
+    text-align: center
+
+
+.sec-text        
+    color: #666
+    font-size: 16px
+    font-style: normal
+    font-weight: 400
+    line-height: 24px
+    max-width: 742px
+    text-align: center
+    align-self: center
+    padding-bottom: 54px
+
+.cards-box
+    display: flex
+    justify-content: space-between
+
+.card
+    width: 370px
+    padding-bottom: 50px
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: flex-end
+
+.card:hover
+    box-shadow: 15px 25px 60px -5px rgba(0, 0, 0, 0.10)
+
+
+.card-heading
+    color: #000
+    text-align: center
+    font-size: 24px
+    font-style: normal
+    font-weight: 400
+    line-height: normal
+    padding-bottom: 22px
+
+.card-text
+    color: #AAA
+    text-align: center
+    font-size: 15px
+    font-style: normal
+    font-weight: 400
+    line-height: 22.5px 
+    padding-bottom: 39px
+
+.card-btn-link
+    text-decoration: none
+    color: #FFF
+    font-size: 13px
+    font-style: normal
+    font-weight: 400
+    width: 150px
+    line-height: 50px
+    display: block
+    text-align: center
+    background-color: #F25822
+    border-radius: 50px
+
+.card-btn-link:hover
+    box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.20)
+
+    
+.card-btn-link::after
+    content: url(img/arrow.svg)
+    padding-left: 6px
